--- a/src/main/webapp/home.xhtml
+++ b/src/main/webapp/home.xhtml
@@ -1,10 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Title</title>
-</head>
-<body>
-Hello World!
-</body>
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
+
+<ui:composition template="template.xhtml">
+    <ui:define name="content">
+        <h:form>
+            <h:panelGroup styleClass="home-buttons-container">
+                <h:commandButton value="Buslinie erstellen" action="booking" styleClass="customButton" />
+                <h:commandButton value="Haltestelle erstellen" action="flightcreator" styleClass="customButton" />
+                <h:commandButton value="Buslinie bearbeiten" action="flightcreator" styleClass="customButton" />
+                <h:panelGroup rendered="#{not user.loggedIn}">
+                    <h:commandButton value="Login" action="#{user.login}" styleClass="customButton" />
+                </h:panelGroup>
+                <h:panelGroup rendered="#{user.loggedIn}">
+                    <h:commandButton value="Logout" action="#{user.logout}" styleClass="customButton" />
+                </h:panelGroup>
+            </h:panelGroup>
+        </h:form>
+    </ui:define>
+</ui:composition>
+
 </html>
