--- a/src/main/webapp/planner.xhtml
+++ b/src/main/webapp/planner.xhtml
@@ -12,7 +12,10 @@
     </ui:define>
 
     <ui:define name="content">
-        <!--Hier Planner dann hin-->
+        <h:panelGrid columns="2">
+            <ui:include src="plannerNav.xhtml"/>
+
+        </h:panelGrid>
     </ui:define>
 </ui:composition>
 </html>
