--- a/src/main/webapp/buslinedisplay.xhtml
+++ b/src/main/webapp/buslinedisplay.xhtml
@@ -8,7 +8,7 @@
 
 <f:view>
     <h:form>
-        <h:dataTable value="#{plannerController.busLines}" var="line" styleClass="ui-datatable">
+        <h:dataTable value="#{plannerController.busLines}" var="line">
             <h:column>
                 <h:outputText value="#{line.id}" />
             </h:column>
