--- a/src/main/webapp/footer.xhtml
+++ b/src/main/webapp/footer.xhtml
@@ -9,4 +9,5 @@
 <h:panelGroup styleClass="footer-panel">
     <h:outputText styleClass="text-footer" value="Marc-Oliver Miekautsch"/>
 </h:panelGroup>
+<h:messages/>
 </html>
