--- a/src/main/webapp/busstopcreator.xhtml
+++ b/src/main/webapp/busstopcreator.xhtml
@@ -8,7 +8,7 @@
 
 <ui:composition template="template.xhtml">
     <ui:define name="title">
-        <title>BUFIBVAS - Bus Stop Creator</title>
+        <title>BUFIVAS - Bus Stop Creator</title>
     </ui:define>
 
     <ui:define name="content">
