--- a/src/main/webapp/header.xhtml
+++ b/src/main/webapp/header.xhtml
@@ -7,7 +7,7 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
 <h:panelGrid columns="3" styleClass="header-grid">
-    <h:outputText value="BUFIBVAS" styleClass="header-title"/>
+    <h:outputText value="BUFIVAS" styleClass="header-title"/>
     <h:link outcome="/home.xhtml" value="Home" styleClass="header-link"/>
     <h:panelGroup rendered="#{user.loggedIn}">
         <h:outputText value="Angemeldet als Manager"/>
