--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -8,7 +8,7 @@
 
 <h:head>
     <ui:insert name="title">
-        <title>BUFIBVAS</title>
+        <title>BUFIVAS</title>
     </ui:insert>
     <link rel="stylesheet" type="text/css" href="#{request.contextPath}/styles/style.css"/>
 </h:head>
