--- a/src/main/webapp/plannerNav.xhtml
+++ b/src/main/webapp/plannerNav.xhtml
@@ -8,17 +8,14 @@
 
 <f:view>
     <h:form>
-        <h:panelGroup styleClass="booking-buttons-container">
-            <h:commandButton value="Übersicht" action="#{plannerController.setStatus(0)}" styleClass="customButton"/>
-            <h:commandButton value="Fluginfo" action="#{plannerController.setStatus(1)}"
+        <h:panelGroup styleClass="planner-buttons-container">
+            <h:commandButton value="Linienübersicht" action="#{plannerController.setStatus(0)}" styleClass="customButton"/>
+            <h:commandButton value="Fahrplan" action="#{plannerController.setStatus(1)}"
                              styleClass="#{plannerController.status lt 1 ? 'customButtonDisabled' : 'customButton'}"
                              disabled="#{plannerController.status lt 1}"/>
-            <h:commandButton value="Passagierdaten" action="#{plannerController.setStatus(2)}"
+            <h:commandButton value="Ergebnis" action="#{plannerController.setStatus(2)}"
                              styleClass="#{plannerController.status lt 2 ? 'customButtonDisabled' : 'customButton'}"
                              disabled="#{plannerController.status lt 2}"/>
-            <h:commandButton value="Bestätigen" action="#{plannerController.setStatus(3)}"
-                             styleClass="#{plannerController.status lt 3 ? 'customButtonDisabled' : 'customButton'}"
-                             disabled="#{plannerController.status lt 3}"/>
         </h:panelGroup>
     </h:form>
 </f:view>
